# LocalKB

./: README.md  pyproject.toml
localkb/: __main__.py  cli.py  server.py  tools.py  utils.py
